--- a/index.html
+++ b/index.html
@@ -26,13 +26,7 @@
                           <input class="form-control mr-sm-2" type="search" aria-label="Search">
                           <button class="btn" type="submit"><span class="oi oi-magnifying-glass"></span></button>
                         </form>
-                            <div class="list-group">
-                                <!-- <li class="list-group-item">Cras justo odio</li> -->
-                                <!-- <li class="list-group-item">Dapibus ac facilisis in</li>
-                                <li class="list-group-item">Morbi leo risus</li>
-                                <li class="list-group-item">Porta ac consectetur ac</li>
-                                <li class="list-group-item">Vestibulum at eros</li> -->
-                                </div>
+                            <div id="cities"></div>
                     </nav>
                 </div>
                 <!--search area end-->
