--- a/index.html
+++ b/index.html
@@ -53,40 +53,40 @@
                         <div id="date1">Date</div>
                         <div class="card-body">
                           <h5 class="card-title">icon</h5>
-                          <p class="card-text">Temp:</p>
-                          <p class="card-text">Humidity:</p>
+                          <p class="Temp1"></p>
+                          <p class="Humid1">Humidity:</p>
                         </div>
                       </div>
                       <div class="card text-white bg-primary mb-3" style="max-width: 10rem;">
                         <div id="date2">Date</div>
                         <div class="card-body">
                           <h5 class="card-title">icon</h5>
-                          <p class="card-text">Temp:</p>
-                          <p class="card-text">Humidity:</class>
+                          <p class="Temp2"></p>
+                          <p class="Humid2">Humidity:</class>
                         </div>
                       </div>
                       <div class="card text-white bg-primary mb-3" style="max-width: 10rem;">
                         <div id="date3">Date</div>
                         <div class="card-body">
                           <h5 class="card-title">icon</h5>
-                          <p class="card-text">Temp:</p>
-                          <p class="card-text">Humidity:</p>
+                          <p class="Temp3"></p>
+                          <p class="Humid3">Humidity:</p>
                         </div>
                       </div>
                       <div class="card text-white bg-primary mb-3" style="max-width: 10rem;">
                         <div id="date4">Date</div>
                         <div class="card-body">
                           <h5 class="card-title">icon</h5>
-                          <p class="card-text">Temp:</p>
-                          <p class="card-text">Humidity:</p>
+                          <p class="Temp4"></p>
+                          <p class="Humid4">Humidity:</p>
                         </div>
                       </div>
                       <div class="card text-white bg-primary mb-3" style="max-width: 10rem;">
                         <div id="date5">Date</div>
                         <div class="card-body">
                           <h5 class="card-title">icon</h5>
-                          <p class="card-text">Temp:</p>
-                          <p class="card-text">Humidity:</p>
+                          <p class="Temp5"></p>
+                          <p class="Humid5">Humidity:</p>
                         </div>
                       </div>
                       </div>
