icon head added

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </div>
                 <!--search area end-->
                 <!--city information-->
-                <div class="col-sm-8 border">
+                <div class="col-sm-8 border city">
                     <h3 id="day"></h3>
                     <p id="temp">Temperature: </p>
                     <p id="humid">Humidity: </p>
@@ -42,51 +42,51 @@
             </div>
             <div class="row">
                 <!--empty space for search cities to add-->
-                <div class="col-sm-4">
+                <div class="col-sm-2">
 
                 </div>
-                <div class="col-sm-8">
+                <div class="col-sm-10 forecast city">
                     <h3>5-Day Forecast</h3>
                     <!--cards for each day forecast-->
                     <div class="row">
-                    <div class="card text-white bg-primary mb-3" style="max-width: 10rem;">
+                    <div class="card text-white bg-primary mb-3" style="max-width: 20rem;">
                         <div id="date1">Date</div>
                         <div class="card-body">
-                          <h5 class="card-title">icon</h5>
+                          <h5 class="Icon1"></h5>
                           <p class="Temp1"></p>
-                          <p class="Humid1">Humidity:</p>
+                          <p class="Humid1"></p>
                         </div>
                       </div>
-                      <div class="card text-white bg-primary mb-3" style="max-width: 10rem;">
+                      <div class="card text-white bg-primary mb-3" style="max-width: 20rem;">
                         <div id="date2">Date</div>
                         <div class="card-body">
-                          <h5 class="card-title">icon</h5>
+                          <h5 class="Icon2"></h5>
                           <p class="Temp2"></p>
-                          <p class="Humid2">Humidity:</class>
+                          <p class="Humid2"></class>
                         </div>
                       </div>
-                      <div class="card text-white bg-primary mb-3" style="max-width: 10rem;">
+                      <div class="card text-white bg-primary mb-3" style="max-width: 20rem;">
                         <div id="date3">Date</div>
                         <div class="card-body">
-                          <h5 class="card-title">icon</h5>
+                          <h5 class="Icon3"></h5>
                           <p class="Temp3"></p>
-                          <p class="Humid3">Humidity:</p>
+                          <p class="Humid3"></p>
                         </div>
                       </div>
-                      <div class="card text-white bg-primary mb-3" style="max-width: 10rem;">
+                      <div class="card text-white bg-primary mb-3" style="max-width: 12rem;">
                         <div id="date4">Date</div>
                         <div class="card-body">
-                          <h5 class="card-title">icon</h5>
+                          <h5 class="Icon4"></h5>
                           <p class="Temp4"></p>
-                          <p class="Humid4">Humidity:</p>
+                          <p class="Humid4"></p>
                         </div>
                       </div>
-                      <div class="card text-white bg-primary mb-3" style="max-width: 10rem;">
+                      <div class="card text-white bg-primary mb-3" style="max-width: 12rem;">
                         <div id="date5">Date</div>
                         <div class="card-body">
-                          <h5 class="card-title">icon</h5>
+                          <h5 class="Icon5"></h5>
                           <p class="Temp5"></p>
-                          <p class="Humid5">Humidity:</p>
+                          <p class="Humid5"></p>
                         </div>
                       </div>
                       </div>
