--- a/index.html
+++ b/index.html
@@ -20,10 +20,8 @@
                 <div class="col-sm-4">
                     <nav class="navbar navbar-light bg-light">
                         <form class="form-inline">
-                            <h2 class="search" data-city="city">Search for a City:</h2>
-                                
-
-                          <input class="form-control mr-sm-2" type="search" aria-label="Search">
+                          <h2 class="search" data-city="city">Search for a City:</h2>
+                          <input id="addCity" class="form-control mr-sm-2" type="text" aria-label="Search">
                           <button class="btn" type="submit"><span class="oi oi-magnifying-glass"></span></button>
                         </form>
                             <div id="cities"></div>
