--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div class="col-sm-10 forecast city">
                     <h3>5-Day Forecast</h3>
                     <!--cards for each day forecast-->
-                    <div class="row">
+                    <div class="row content">
                     <div class="card text-white bg-primary mb-3" style="max-width: 14rem;">
                         <div id="date1">Date</div>
                         <div class="card-body">
