search history fixed

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
                     <p id="temp">Temperature: </p>
                     <p id="humid">Humidity: </p>
                     <p id="wind">Wind Speed: </p>
-                    <p id="uv"> UV Index: </p>
+                    <p> UV Index:
+                      <span class="color" id="uv"></span> 
+                    </p>
 
                 </div>
             </div>
